2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</h/n/>| case code rearranged to align with
	the spec (HTML5 revision 1320).  Note that we finally complete
	all of HTML5 revision 1320 changes.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</form>| now works similar to |</div>| for unclosed
	tags (HTML5 revision 1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: |</p>| case rearranged with no actual change in fact.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: A "generate implied end tags" code (t409.1)
	could not be reached so that it is now removed (HTML5 revision
	1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Code for the case of |</div>| and so on are revised
	to align with new spec text (HTML5 revision 1320).

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Remove strange |if| condition; however, it should
	have had no harm in theory.

2008-03-08  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): '</p>' in body
	case is split from other end tags for the preparation
	of implementing HTML revision 1320.

2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Simplified "generate implied end tag" (HTML5
	revision 1320).

2008-03-07  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_main): Merge rules for "h1"
	and "div" (HTML5 revision 1318).  Add comments to where
	|form| pointer association codes should be inserted (HTML5 revision
	1319).

2008-03-06  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: <html> treatement refined (HTML5 revision 1314).

2008-03-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Since the case t268 should never be reached (no
	other token type, there are), it is replaced by a |die| statement.

2008-03-05  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src: Typo fixed.

2008-03-04  Wakaba  <wakaba@suika.fam.cx>

	* HTML.pm.src (_tree_construction_initial): Some limited quirks