@@ -1,6 +1,6 @@
 package Whatpm::HTML;
 use strict;
-our $VERSION=do{my @r=(q$Revision: 1.93 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
+our $VERSION=do{my @r=(q$Revision: 1.94 $=~/\d+/g);sprintf "%d."."%02d" x $#r,@r};
 use Error qw(:try);
 
 ## ISSUE:
@@ -4230,7 +4230,6 @@ sub _tree_construction_main ($) {
                 while ($self->{open_elements}->[-1]->[1] ne 'table' and
                        $self->{open_elements}->[-1]->[1] ne 'html') {
                   !!!cp ('t201');
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4251,7 +4250,6 @@ sub _tree_construction_main ($) {
                 }->{$self->{open_elements}->[-1]->[1]}) {
                   !!!cp ('t203');
                   ## ISSUE: Can this case be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4275,7 +4273,6 @@ sub _tree_construction_main ($) {
                 tr => 1, html => 1,
               }->{$self->{open_elements}->[-1]->[1]}) {
                 !!!cp ('t207');
-                !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                 pop @{$self->{open_elements}};
               }
               
@@ -4326,7 +4323,6 @@ sub _tree_construction_main ($) {
                 }->{$self->{open_elements}->[-1]->[1]}) {
                   !!!cp ('t211');
                   ## ISSUE: Can this case be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4375,7 +4371,6 @@ sub _tree_construction_main ($) {
                 }->{$self->{open_elements}->[-1]->[1]}) {
                   !!!cp ('t217');
                   ## ISSUE: Can this state be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4399,7 +4394,6 @@ sub _tree_construction_main ($) {
                        $self->{open_elements}->[-1]->[1] ne 'html') {
                   !!!cp ('t219');
                   ## ISSUE: Can this state be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4417,7 +4411,6 @@ sub _tree_construction_main ($) {
                        $self->{open_elements}->[-1]->[1] ne 'html') {
                   !!!cp ('t220');
                   ## ISSUE: Can this state be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4529,7 +4522,6 @@ sub _tree_construction_main ($) {
               }->{$self->{open_elements}->[-1]->[1]}) {
                 !!!cp ('t231');
 ## ISSUE: Can this state be reached?
-                !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                 pop @{$self->{open_elements}};
               }
 
@@ -4570,7 +4562,6 @@ sub _tree_construction_main ($) {
                 }->{$self->{open_elements}->[-1]->[1]}) {
                   !!!cp ('t236');
 ## ISSUE: Can this state be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4610,7 +4601,6 @@ sub _tree_construction_main ($) {
                   tbody => 1, tfoot => 1, thead => 1, html => 1,
                 }->{$self->{open_elements}->[-1]->[1]}) {
                   !!!cp ('t240');
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4625,6 +4615,11 @@ sub _tree_construction_main ($) {
                 $self->{insertion_mode} = IN_TABLE_IM;
                 ## reprocess in the "in table" insertion mode...
               }
+
+              ## NOTE: </table> in the "in table" insertion mode.
+              ## When you edit the code fragment below, please ensure that
+              ## the code for <table> in the "in table" insertion mode
+              ## is synced with it.
 
               ## have a table element in table scope
               my $i;
@@ -4647,22 +4642,6 @@ sub _tree_construction_main ($) {
                 ## Ignore the token
                 !!!next-token;
                 redo B;
-              }
-
-              ## generate implied end tags
-              while ({
-                      dd => 1, dt => 1, li => 1, p => 1,
-                     }->{$self->{open_elements}->[-1]->[1]}) {
-                !!!cp ('t244');
-## ISSUE: Can this case be reached?
-                pop @{$self->{open_elements}};
-              }
-              
-              if ($self->{open_elements}->[-1]->[1] ne 'table') {
-                !!!cp ('t245');
-                !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
-              } else {
-                !!!cp ('t246');
               }
                 
               splice @{$self->{open_elements}}, $i;
@@ -4729,7 +4708,6 @@ sub _tree_construction_main ($) {
                 }->{$self->{open_elements}->[-1]->[1]}) {
                   !!!cp ('t253');
 ## ISSUE: Can this case be reached?
-                  !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                   pop @{$self->{open_elements}};
                 }
                 
@@ -4767,7 +4745,6 @@ sub _tree_construction_main ($) {
               }->{$self->{open_elements}->[-1]->[1]}) {
                 !!!cp ('t257');
 ## ISSUE: Can this case be reached?
-                !!!parse-error (type => 'not closed:'.$self->{open_elements}->[-1]->[1]);
                 pop @{$self->{open_elements}};
               }
 
@@ -6455,4 +6432,4 @@ package Whatpm::HTML::RestartParser;
 push our @ISA, 'Error';
 
 1;
-# $Date: 2008/03/08 03:43:48 $
+# $Date: 2008/03/08 04:13:10 $
