@@ -1,5 +1,10 @@
 2008-03-08  Wakaba  <wakaba@suika.fam.cx>
 
+	* HTML.pm.src: Reduce errors from foster parenting cases (HTML5
+	revision 1321).
+
+2008-03-08  Wakaba  <wakaba@suika.fam.cx>
+
 	* HTML.pm.src: |</h/n/>| case code rearranged to align with
 	the spec (HTML5 revision 1320).  Note that we finally complete
 	all of HTML5 revision 1320 changes.
